Add custom validation
used custom validation by overriding clean method.

--- a/mainsite/medic/templates/Medic/register.html
+++ b/mainsite/medic/templates/Medic/register.html
@@ -1,5 +1,6 @@
 <form enctype="multipart/form-data" action="{% url 'medic:register_validation' %}" method="post">
     {% csrf_token %}
+    {{ form.non_field_errors }}
     {% for field in form %}
     <div style="padding:50;">
         {{ field.label_tag }} {{ field }}
