--- a/mainsite/medic/templates/Medic/medicine_list.html
+++ b/mainsite/medic/templates/Medic/medicine_list.html
@@ -1,4 +1,4 @@
-<h1>Articles</h1>
+<h1>Medicines</h1>
 <h3>time: {{now|time}}</h3>
 <ul>
 {% for med in object_list %}
@@ -7,3 +7,22 @@
     <li>No Medicine Availabel.</li>
 {% endfor %}
 </ul>
+
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
